Collegato data img in html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
@@ -12,13 +13,13 @@
         <div id="root">
             <div class="box-img">
                 <div class="arrow-left">
-
+                    <i class="fas fa-arrow-left"></i>
                 </div>
                 <div class="content-img">
-
+                    <img :src="imgs[0]" alt="">
                 </div>
                 <div class="arrow-right">
-
+                    <i class="fas fa-arrow-right"></i>
                 </div>
             </div>
         </div>
